# rustafari

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/drivers/: hardware.rs  software.rs
src/modules/initial/: draw.rs  hw.rs  loader.rs  mod.rs  sw.rs
src/modules/shared/: formats.rs
