[package]
name = "rustafari"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-info = "0.9.0"
mac_address = "1.1.4"
local-ip-address = "0.5.6"
os_info = "3.0.7"
sysinfo = "0.29.11"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
